# flash-linear-attention

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DESIGN_CP_INTERFACE.md  ENVs.md  FAQs.md  INSTALL.md  PR_DESCRIPTION.md  README.md  classification.py  model.py  pyproject.toml  rwkv7_conversion.py  setup.py
.agents/: README.md
.agents/skills/: README.md
.github/: actionlint.yaml
.github/workflows/: amd-mi300.yml  ascend-a2-ci.yml  benchmark-comment.yml  check-header.yml  check-no-oj.yml  check-pr-title.yml  intel-a770-compile.yml  intel-a770-varlen.yml  intel-a770.yml  intel-b580.yml  issue-pytest-command.yml  issue.yml  lint.yaml  nvidia-4090-compile.yml  nvidia-4090-varlen.yml  nvidia-4090.yml  nvidia-a100.yml  nvidia-h100.yml  oj.yml  pytorch-ci.yml  release.yml  reusable-build-triton.yml  reusable-ci-benchmarks.yml  reusable-ci-tests.yml  triton-builder.yml  triton-nightly.yml  update-year.yml
benchmarks/: benchmark_generation.py  benchmark_training_throughput.py
benchmarks/cp/: benchmark_chunk_delta_h_kernels.py  test_gdn_with_cp.py
benchmarks/layers/: benchmark_gated_deltanet.py
benchmarks/modules/: benchmark_activations.py  benchmark_canon.py  benchmark_conv.py  benchmark_fused_conv_l2.py  benchmark_l2norm.py  benchmark_tokenshift.py
benchmarks/ops/: benchmark.py  benchmark_delta_rule.py  benchmark_gdn2.py  benchmark_gla.py  benchmark_hgrn.py  benchmark_kda.py  benchmark_kda_intra.py  benchmark_retention.py  benchmark_rwkv.py  benchmark_rwkv7.py  benchmark_rwkv7_k_update.py  benchmark_simple_gla_vs_mamba2.py  benchmark_titans.py  benchmark_ttt.py  registry.py  run.py  verify.py
evals/: harness.py  ppl.py
fla/: __init__.py  utils.py
fla/cp/: conv.py
fla/layers/: __init__.py  abc.py  attn.py  based.py  bitattn.py  comba.py  delta_net.py  deltaformer.py  dswattn.py  flash_moba.py  forgetting_attn.py  fox.py  gated_deltanet.py  gated_deltanet_cp.py  gated_deltanet_v2.py  gated_deltaproduct.py  gdn2.py  gla.py  gsa.py  hgrn.py  hgrn2.py  hla.py  kda.py  lightnet.py  linear_attn.py  linoss.py  log_linear_mamba2.py  mala.py  mamba.py  mamba2.py  mamba3.py  mesa_net.py  mla.py  moba.py  mom.py  mom_varlen.py  multiscale_retention.py  nsa.py  parallax.py  parallax_attn.py  (+16 more)
fla/models/: __init__.py  utils.py
fla/modules/: __init__.py  activations.py  canon.py  convolution.py  feature_map.py  fused_bitlinear.py  fused_cross_entropy.py  fused_kl_div.py  fused_linear_cross_entropy.py  fused_norm_gate.py  fused_norm_gate_npu.py  grop.py  grpo.py  l2norm.py  l2warp.py  layernorm.py  layernorm_gated.py  mlp.py  rotary.py  token_shift.py  token_shift_cp.py
fla/ops/: __init__.py
fla/utils/: __init__.py  _compat.py  _config.py  _decorators.py  _device.py  asm.py  common.py  cumsum.py  layers.py  logcumsumexp.py  logsumexp.py  matmul.py  op.py  pooling.py  softmax.py  solve_tril.py
fla/vision_models/: __init__.py  utils.py
legacy/training/: run.py
scripts/: build_packages.py  check_gpu.py  demo_extract_configs.py  extract_triton_autotune_cache.py  find_dependent_tests.py  repro_b200_int64_offsets.py  run_benchmark_compare.py  smoke_test_split_packages.py
scripts/utils/: __init__.py  autotune_export.py  autotune_generate.py
tests/: conftest.py  test_generation.py  test_model.py  test_padding.py  test_public_api.py  test_split_package_release.py  test_utils.py
tests/context_parallel/: test_cp_bwd_gk_offset.py  test_cp_conv.py  test_cp_dplr.py  test_cp_gdn.py  test_cp_kda.py  test_gdn_with_cp.py
tests/cp/: README.md  benchmark_memory.py  test_cp_halo.py  test_cp_halo_unit.py  test_cp_stability.py  test_gdn_cp_backward.py  test_gdn_cp_forward.py  test_numerical_correctness.py  train_cp_real.py
tests/layers/: test_attn_varlen_pack_layout.py  test_based.py  test_gated_deltanet.py  test_gla.py  test_gla_layer.py  test_layer_cache_layer_idx.py  test_linearatten_layer.py  test_parallax.py
tests/models/: test_cache.py  test_modeling_abc.py  test_modeling_base.py  test_modeling_bitnet.py  test_modeling_comba.py  test_modeling_deltaformer.py  test_modeling_deltanet.py  test_modeling_forgetting_transformer.py  test_modeling_forgettingtransformer.py  test_modeling_gated_deltanet.py  test_modeling_gated_deltaproduct.py  test_modeling_gateddeltanet.py  test_modeling_gateddeltaproduct.py  test_modeling_gdn2.py  test_modeling_gla.py  test_modeling_gsa.py  test_modeling_hgrn.py  test_modeling_hgrn2.py  test_modeling_kda.py  test_modeling_lightnet.py  test_modeling_linear_attn.py  test_modeling_linearattention.py  test_modeling_log_linear_mamba2.py  test_modeling_mamba.py  test_modeling_mamba2.py  test_modeling_mamba3.py  test_modeling_mesanet.py  test_modeling_mla.py  test_modeling_moba.py  test_modeling_mom.py  test_modeling_nsa.py  test_modeling_parallax.py  test_modeling_parallax_transformer.py  test_modeling_path_attn.py  test_modeling_pathattention.py  test_modeling_precond_gated_deltanet.py  test_modeling_precond_kda.py  test_modeling_raven.py  test_modeling_retnet.py  test_modeling_rodimus.py  (+10 more)
training/: classification.py
utils/: convert_from_llama.py  convert_from_rodimus.py  convert_from_rwkv6.py  convert_from_rwkv7.py
(+547 files in other folders)
